# homescreen

./: .gitreview  CMakeLists.txt  README.md  homescreen.pro
homescreen/: HomeScreen.launch  homescreen.pro  meson.build
homescreen/conf/: HomeScreen.service
homescreen/docs/: api-services-book.yml  homescreen-book.yml
homescreen/qml/: Home.qml  MediaArea.qml  MediaAreaBlank.qml  ShortcutArea.qml  ShortcutIcon.qml  SpeechChrome.qml  StatusArea.qml  SystemUI.qml  TopArea.qml  background.qml  bottompanel.qml  main.qml  qml.qrc  toppanel.qml
homescreen/qml/images/: images.qrc
homescreen/qml/images/Home/: home.qrc
homescreen/qml/images/Shortcut/: shortcut.qrc
homescreen/qml/images/SpeechChrome/: speechchrome.qrc
homescreen/src/: AglShellManager.cpp  AglShellManager.h  Worker.h  appinfo.cpp  appinfo.h  applicationlauncher.cpp  applicationlauncher.h  applicationmodel.cpp  applicationmodel.h  chromecontroller.cpp  chromecontroller.h  constants.h  homescreenconnect.cpp  homescreenconnect.h  homescreenhandler.cpp  homescreenhandler.h  homescreenvoice.cpp  homescreenvoice.h  main.cpp  shell.cpp  shell.h  shortcutappmodel.cpp  shortcutappmodel.h  statusbarmodel.cpp  toucharea.cpp  toucharea.h  usermanagement.cpp  usermanagement.h
package/: config.xml  package.pro
package/etc/: registeredApp.json
package/root/: config.xml  pipeline.ini
pws/: launcher.cpp  launcher.h  pws.cpp  pws.h
src/: gst-wayland-demo.cpp  gst-wayland-demo.hpp  parson.h  sdl-protocol.c
